manifests/operator-8.1.13.tgz-manifest.yaml
---
# Source: operator/charts/operator.webhook/templates/webhook-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-release-webhook-service
  namespace: default
  labels:
    control-plane: my-release-controller-manager
spec:
  ports:
    - port: 443
      targetPort: 9443
  selector:
    control-plane: my-release-controller-manager
---
# Source: operator/templates/metrics-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-release-metrics-service
  namespace: default
  labels:
    control-plane: my-release-controller-manager
spec:
  type: ClusterIP
  ports:
    - name: "8443"
      port: 8443
  selector:
    control-plane: my-release-controller-manager
---
# Source: operator/templates/manager-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    prometheus.io/port: "9443"
    prometheus.io/scrape: "true"
    control-plane: my-release-controller-manager
  annotations:
    publisher: punch
  name: my-release-controller-manager
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      control-plane: my-release-controller-manager
  template:
    metadata:
      labels:
        control-plane: my-release-controller-manager
        prometheus.io/port: "9443"
        prometheus.io/scrape: "true"
      annotations:
        publisher: punch 
    spec:
      imagePullSecrets:
        - name: admin-secret
      containers:
        - args:
            - --config=controller_manager_config.yaml
            - --enable-webhook=true
          command:
            - /manager
          image: ghcr.io/punchplatform/operator:8.1-dev
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8081
            initialDelaySeconds: 15
            periodSeconds: 20
          name: manager
          ports:
            - containerPort: 8443
              name: metric-server
              protocol: TCP
            - containerPort: 9443
              name: webhook-server
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /readyz
              port: 8081
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            limits:
              cpu: 1000m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 20Mi
          securityContext:
            allowPrivilegeEscalation: false
          volumeMounts:
            - mountPath: /tmp/k8s-webhook-server/serving-certs
              name: cert
              readOnly: true
            - mountPath: /controller_manager_config.yaml
              name: manager-config
              subPath: controller_manager_config.yaml
      securityContext:
        runAsNonRoot: true
      serviceAccountName: my-release-controller-manager
      terminationGracePeriodSeconds: 10
      volumes:
        - name: cert
          secret:
            defaultMode: 420
            secretName: my-release-webhook-server-cert
        - configMap:
            name: my-release-manager-config
          name: manager-config
---
# Source: operator/charts/operator.webhook/templates/manifests.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  creationTimestamp: null
  name: my-release-mutating-webhook-configuration
  annotations:
    cert-manager.io/inject-ca-from: default/my-release-serving-cert
webhooks:
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: my-release-webhook-service
      namespace: default
      path: /mutate-punchline-punchplatform-io-v2-batchapplication
  failurePolicy: Fail
  name: mbatchapplication.kb.io
  rules:
  - apiGroups:
    - punchline.punchplatform.io
    apiVersions:
    - v2
    operations:
    - CREATE
    - UPDATE
    resources:
    - batchapplications
  sideEffects: None
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: my-release-webhook-service
      namespace: default
      path: /mutate-punchline-punchplatform-io-v2-batchpunchline
  failurePolicy: Fail
  name: mbatchpunchline.kb.io
  rules:
  - apiGroups:
    - punchline.punchplatform.io
    apiVersions:
    - v2
    operations:
    - CREATE
    - UPDATE
    resources:
    - batchpunchlines
  sideEffects: None
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: my-release-webhook-service
      namespace: default
      path: /mutate-punchline-punchplatform-io-v2-sparkpunchline
  failurePolicy: Fail
  name: msparkpunchline.kb.io
  rules:
  - apiGroups:
    - punchline.punchplatform.io
    apiVersions:
    - v2
    operations:
    - CREATE
    - UPDATE
    resources:
    - sparkpunchlines
  sideEffects: None
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: my-release-webhook-service
      namespace: default
      path: /mutate-punchline-punchplatform-io-v2-streamapplication
  failurePolicy: Fail
  name: mstreamapplication.kb.io
  rules:
  - apiGroups:
    - punchline.punchplatform.io
    apiVersions:
    - v2
    operations:
    - CREATE
    - UPDATE
    resources:
    - streamapplications
  sideEffects: None
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: my-release-webhook-service
      namespace: default
      path: /mutate-punchline-punchplatform-io-v2-streampunchline
  failurePolicy: Fail
  name: mstreampunchline.kb.io
  rules:
  - apiGroups:
    - punchline.punchplatform.io
    apiVersions:
    - v2
    operations:
    - CREATE
    - UPDATE
    resources:
    - streampunchlines
  sideEffects: None
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: my-release-webhook-service
      namespace: default
      path: /mutate-punchline-punchplatform-io-v1-flinkline
  failurePolicy: Fail
  name: mflinkline.kb.io
  rules:
  - apiGroups:
    - punchline.punchplatform.io
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - flinklines
  sideEffects: None
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: my-release-webhook-service
      namespace: default
      path: /mutate-punchline-punchplatform-io-v1-sparkline
  failurePolicy: Fail
  name: msparkline.kb.io
  rules:
  - apiGroups:
    - punchline.punchplatform.io
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - sparklines
  sideEffects: None
---
# Source: operator/charts/operator.webhook/templates/manifests.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  creationTimestamp: null
  name: my-release-validating-webhook-configuration
  annotations:
    cert-manager.io/inject-ca-from: default/my-release-serving-cert
webhooks:
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: my-release-webhook-service
      namespace: default
      path: /validate-punchline-punchplatform-io-v2-batchapplication
  failurePolicy: Fail
  name: vbatchapplication.kb.io
  rules:
  - apiGroups:
    - punchline.punchplatform.io
    apiVersions:
    - v2
    operations:
    - CREATE
    - DELETE
    - UPDATE
    resources:
    - batchapplications
  sideEffects: None
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: my-release-webhook-service
      namespace: default
      path: /validate-punchline-punchplatform-io-v2-batchpunchline
  failurePolicy: Fail
  name: vbatchpunchline.kb.io
  rules:
  - apiGroups:
    - punchline.punchplatform.io
    apiVersions:
    - v2
    operations:
    - CREATE
    - DELETE
    - UPDATE
    resources:
    - batchpunchlines
  sideEffects: None
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: my-release-webhook-service
      namespace: default
      path: /validate-punchline-punchplatform-io-v2-sparkpunchline
  failurePolicy: Fail
  name: vsparkpunchline.kb.io
  rules:
  - apiGroups:
    - punchline.punchplatform.io
    apiVersions:
    - v2
    operations:
    - CREATE
    - DELETE
    - UPDATE
    resources:
    - sparkpunchlines
  sideEffects: None
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: my-release-webhook-service
      namespace: default
      path: /validate-punchline-punchplatform-io-v2-streamapplication
  failurePolicy: Fail
  name: vstreamapplication.kb.io
  rules:
  - apiGroups:
    - punchline.punchplatform.io
    apiVersions:
    - v2
    operations:
    - CREATE
    - DELETE
    - UPDATE
    resources:
    - streamapplications
  sideEffects: None
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: my-release-webhook-service
      namespace: default
      path: /validate-punchline-punchplatform-io-v2-streampunchline
  failurePolicy: Fail
  name: vstreampunchline.kb.io
  rules:
  - apiGroups:
    - punchline.punchplatform.io
    apiVersions:
    - v2
    operations:
    - CREATE
    - DELETE
    - UPDATE
    resources:
    - streampunchlines
  sideEffects: None
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: my-release-webhook-service
      namespace: default
      path: /validate-punchline-punchplatform-io-v1-flinkline
  failurePolicy: Fail
  name: vflinkline.kb.io
  rules:
  - apiGroups:
    - punchline.punchplatform.io
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources:
    - flinklines
  sideEffects: None
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: my-release-webhook-service
      namespace: default
      path: /validate-punchline-punchplatform-io-v1-sparkline
  failurePolicy: Fail
  name: vsparkline.kb.io
  rules:
  - apiGroups:
    - punchline.punchplatform.io
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources:
    - sparklines
  sideEffects: None
